# meteolibre_model

./: .gitignore  CRUSH.md  MANIFEST.in  README.md  eval.txt  eval_longhorizon.txt  init.sh  pyproject.toml  requirements-simplediff.txt  requirements.txt  setup.py
data/: README.md
meteolibre_model/dit/: ASFT.py  (+6 more)
scripts/: compute_mean_std.py  compute_mean_std_ground.py  compute_mean_std_lightning.py  compute_residual_mean_std.py  es_finetune.py  eval_baseline_mtg_lightning.py  eval_horizons.py  eval_rf_mtg_lightning.py  inference_testing.py  normalized.ipynb  tiled_inference.py  tiled_inference_shortcut.py  tiled_inference_world_correction.py  tiled_inference_world_shortcut.py  tiled_inference_world_shortcut_xpred.py  train_accelerate.py  train_rectified_flow_accelerate.py  train_rectified_flow_rolling_accelerate.py  train_rf_accelerate.py  train_rf_correction_lightning_shortcut.py  train_rf_mtg_lightning.py  train_rf_mtg_lightning_shortcut.py  train_rf_mtg_lightning_shortcut_autoregressive.py  train_rf_mtg_lightning_shortcut_xpred.py  train_rf_mtg_meteofrance.py  train_score_based_accelerate.py  training_meteofrance_LTX_vae.py  training_meteofrance_ambiant_diffusion.py  training_meteofrance_simplediffusion.py  training_meteofrance_simplediffusion_accelerate.py  training_meteofrance_simplediffusion_fm_multigpu.py  training_meteofrance_simplediffusion_multigpu.py  visualize_data.ipynb  visualize_data_v2.ipynb  visualize_forecast.py  visualize_forecast_clean.py  visualize_forecast_shortcut.py  visualize_noise_effect.py  visualize_noise_schedule.py  visualized.ipynb  (+1 more)
(+34 files in other folders)
