[project]
name = "meteolibre-model"
version = "0.1.0"
description = "MeteoLibre Model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "datasets",
    "torch",
    "accelerate",
    "tqdm",
    "torchvision>=0.23.0",
    "huggingface_hub[cli]>=0.0.1",
    "suncalc>=0.1.3",
    "scipy>=1.15.3",
    "tensorboard>=2.20.0",
    "torch-dct>=0.1.6",
    "einops>=0.8.1",
]

[tool.setuptools]
packages = ["meteolibre_model"]
